manifests/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-list-app
spec:
  selector:
    app: todo-list-app
  ports:
  - name: foo # name is not required for single-port Services
    port: 80
    targetPort: 3000
